feat: user,jobs,pets 조회 시 파일  필드 추가
